# Graphene-HA

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  ENHANCEMENTS.md  PERFORMANCE_ANALYSIS.md  QUICK_REFERENCE.md  README.md  analyze_performance.py  build.bat  gen_node_cases.py  measure_accuracy.py  pyproject.toml  summarize_java_static.py  test_comprehensive.py  tmp_clear_old_logs.py
analyzers/: README.md
analyzers/go/: README.md  main.go  static_analyzer.go
analyzers/go-bridge/: README.md  go.mod  main.go  static_analyzer.go
analyzers/java/: README.md  dependency-reduced-pom.xml  pom.xml
analyzers/java-bridge/: README.md  dependency-reduced-pom.xml
analyzers/nodejs/: README.md  analyzer_bridge.js  static_analyzer.js
analyzers/nodejs-bridge/: analyzer_bridge.js  package.json  static_analyzer.js
analyzers/python/: README.md  analyzer_bridge.py  static_analyzer.py
analyzers/python-bridge/: analyzer_bridge.py  static_analyzer.py
analyzers/rust/: Cargo.toml  README.md
analyzers/rust-bridge/: Cargo.toml  README.md
analyzers/rust-bridge/src/: main.rs
benchmarks/: oss_benchmark_report.csv  oss_benchmark_report_static_rq1.csv
docs/: PERFORMANCE_ANALYSIS.md
docs/archive/: ARCHITECTURE.md  MULTI_LANGUAGE_README.md  QUICKSTART.md  README.md  (+2 more)
graphene_ha/: __init__.py  cli.py  constants.py  help.py  logging_util.py  test_harness.py  vulnerability_detector.py
object_escape_autograder_example/: autograder_with_object_escapes.py
scripts/: analyze_performance.py  build.bat  build.sh  build_baseline_and_buckets.py  build_comparison_dashboard.py  collect_competitor_benchmarks.py  gen_node_cases.py  measure_accuracy.py  run_full_comparison.py  run_open_source_benchmarks.py  summarize_java_static.py  test_comprehensive.py
src/: analyzer.rs  main.rs  orchestrator.rs  protocol.rs  report.rs  static_analyzer.rs
tests/: README.md  comprehensive_measurement.py  comprehensive_summary.py  debug_fp.py  direct_measurement.py  generate_additional_cases.py  generate_extreme_cases.py  measure_success_rate.py  paper_limitations_probe.py  quick_test.py
tests/rust/: Cargo.toml  README.md  advanced_escapes.rs  comprehensive_escapes.rs  escape_async.rs  escape_threads.rs  lib.rs  no_escape_async.rs  no_escape_threads.rs  run_escape_async.rs  run_escape_threads.rs
tests/rust/cases/: case_001_cache_profile.rs  case_002_cache_order.rs  case_003_cache_invoice.rs  case_004_cache_shipment.rs  case_005_cache_ticket.rs  case_006_cache_subscription.rs  case_007_publish_session.rs  case_008_publish_inventory.rs  case_009_publish_forecast.rs  case_010_publish_ledger.rs  case_011_publish_profile.rs  case_012_publish_order.rs  case_013_publish_invoice.rs  case_014_publish_shipment.rs  case_015_publish_ticket.rs  case_016_stage_subscription.rs  case_017_stage_session.rs  case_018_stage_inventory.rs  case_019_stage_forecast.rs  case_020_stage_ledger.rs  case_021_stage_profile.rs  case_022_stage_order.rs  case_023_stage_invoice.rs  case_024_stage_shipment.rs  case_025_stage_ticket.rs  case_026_stage_subscription.rs  case_027_archive_session.rs  case_028_archive_inventory.rs  case_029_archive_forecast.rs  case_030_archive_ledger.rs  case_031_archive_profile.rs  case_032_archive_order.rs  case_033_archive_invoice.rs  case_034_archive_shipment.rs  case_035_archive_ticket.rs  case_036_normalize_subscription.rs  case_037_normalize_session.rs  case_038_normalize_inventory.rs  case_039_normalize_forecast.rs  case_040_normalize_ledger.rs  (+263 more)
(+1252 files in other folders)
