[package]
name = "graphene-ha"
version = "0.1.0"
edition = "2021"
authors = ["Graphene HA Team"]
description = "Multi-language concurrency escape detection orchestrator"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[workspace]
members = [
    ".",
    "analyzers/rust-bridge",
    "tests/rust",
]

[[bin]]
name = "graphene-ha"
path = "src/main.rs"
