[project]
name = "graphene-ha"
version = "0.2.0"
description = "Graphene HA - Multi-language concurrency escape detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
graphene = "graphene_ha.cli:main"

[tool.uv]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graphene_ha"]
