[package]
name = "rust-escape-analyzer"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
libloading = "0.8"

[[bin]]
name = "rust-analyzer"
path = "src/main.rs"
